# resume-parser

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  skills_db.csv  text_processor.py
