[tool.poetry]
name = "resume-parser"
version = "0.0.0"
description = "Resume Parser"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
nltk = "^3.6.7"
pdfminer = "^20191125"
"pdfminer.six" = "^20211012"
docx2txt = "^0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
